# torenone

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TorenOne-YC-Application.md  fly.toml  netlify.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: COMPETITIVE-LANDSCAPE.md  COMPETITIVE.md  DATA_RETENTION.md  DB_OPS.md  DEPLOY.md  DESIGN-ARCHITECTURE.md  E2E_CI_SETUP.md  GO_LIVE.md  HANDOVER.md  MIGRATIONS.md  PADDLE.md  PAYMENTS.md  PRD.md  PRICING.md  PRODUCTION_READINESS.md  PROJECT-SETUP.md  REDBOOK-VALIDATION.md  REFERENCES-AND-VALIDATION.md  SESSION_HANDOFF.md  SIGN-OFF-PACK.md  SOURCES.md  TASKS.md  VALIDATION_GUIDE.md  WIND-VERIFICATION.md
kernel/src/torenone_kernel/: __init__.py  design.py  layout.py  rules_version.py
kernel/src/torenone_kernel/analysis/: diagram_data.py  plane_frame.py  sway_check.py
kernel/src/torenone_kernel/checks/: autosize.py  axial.py  bending.py  classification.py  deflection.py  interaction.py  material.py  shear.py
kernel/src/torenone_kernel/codes/: __init__.py  base.py  sans10162.py
kernel/src/torenone_kernel/connections/: __init__.py  bolts.py  moment_endplate.py  textbook.py
kernel/src/torenone_kernel/foundations/: __init__.py  baseplate.py  baseplate_sans.py  pad_footing.py
kernel/src/torenone_kernel/loads/: __init__.py  combinations.py  dead.py  imposed.py  wind.py  wind_loads.py  wind_pressure.py
kernel/src/torenone_kernel/models/: __init__.py  enums.py  frame_spec.py  results.py
kernel/src/torenone_kernel/report/: __init__.py  diagrams.py  metadata.py  renderer.py  template.html.jinja2
kernel/src/torenone_kernel/sections/: __init__.py  library.py  properties.py
kernel/tests/: test_audit_metadata.py  test_autosize.py  test_baseplate.py  test_check_mode.py  test_combinations.py  test_connections.py  test_dead_loads.py  test_design_monopitch.py  test_design_multispan.py  test_determinism.py  test_diagram_data.py  test_diagrams.py  test_frame_spec.py  test_golden_report.py  test_imposed_loads.py  test_last_mile.py  test_last_mile_report.py  test_layout.py  test_member_checks.py  test_orchestrator.py  test_pad_footing.py  test_plane_frame.py  test_plane_frame_monopitch.py  test_plane_frame_multispan.py  test_plane_frame_wind.py  test_plane_frame_wind_monopitch.py  test_plane_frame_wind_multispan.py  test_report.py  test_results.py  test_rules_version.py  test_saisc_dataset.py  test_sections.py  test_show_your_working.py  test_status_rendering.py  test_sway_check.py  test_wind.py  test_wind_followups.py  test_wind_in_report.py  test_wind_loads.py  test_wind_pressure.py
kernel/tests/validation/: benchmarks.py  test_validation.py
kernel/tests/validation/redbook/: cases.py  test_redbook_compression.py  (+5 more)
service/: README.md
service/src/torenone_ai/: __init__.py  clarify.py  client.py  config.py  design_agent.py  narrative.py  parsing.py
service/src/torenone_service/: __init__.py  ai_runtime.py  analytics.py  app.py  auth.py  design_service.py  errors.py  logging_config.py  main.py  reports.py  schemas.py  stamp_service.py
service/tests/: test_ai_config.py  test_analytics.py  test_app.py  test_auth.py  test_auth_jwks.py  test_clarify.py  test_clarify_loop.py  test_compare_layouts_route.py  test_compare_spans_route.py  test_cors.py  test_deploy.py  test_design_agent.py  test_design_route.py  test_errors.py  test_guardrails.py  test_narrative.py  test_parse_drawing.py  test_parse_drawing_pdf.py  test_parse_drawing_route.py  test_parse_route.py  test_parsing.py  test_propose_frame.py  test_propose_frame_route.py  test_prune_reports.py  test_reports_supabase.py  test_stamp_route.py
standards/: README.md
supabase/: config.toml  seed.sql
supabase/migrations/: 20260612120000_initial_schema.sql  20260612120100_auth_profile_trigger.sql  20260612120200_storage_reports_bucket.sql  20260612120300_rls_policies.sql  20260617120000_runs_result_column.sql  20260624120000_runs_label.sql  20260625120000_paddle_billing.sql  20260626120000_pilot_firms.sql  20260627120000_payments_provider_neutral.sql  20260630120000_project_report_metadata.sql  20260630130000_engineer_stamp.sql
supabase/tests/: test_auth_trigger.py  test_rls_isolation.py  test_rls_policies.py  test_schema.py  test_seed.py  test_storage.py
supabase/tests/harness/: 00_supabase_stubs.sql
tools/: build_saisc_sections.py  prune_reports.py  validate_frame.py
tools/tests/: test_contrast.py
tools/torenone_tokens/: __init__.py  contrast.py  tokens.py
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/design/: tailwind-tokens.ts  tokens.css
web/e2e/: error-paths.spec.ts  happy-path.spec.ts  multi-tenant.spec.ts  smoke.spec.ts  support.ts
web/src/: instrumentation-client.ts  instrumentation.ts  proxy.ts
web/src/app/: global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
web/src/components/: status-badge.test.tsx  status-badge.tsx
web/src/lib/: layout.ts  redbook.ts  site.ts  styles.ts  utils.ts
(+159 files in other folders)
