[project]
name = "torenone"
version = "0.0.0"
description = "TorenOne — AI structural engineer (kernel + service)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["kernel/src"]

[tool.pytest.ini_options]
pythonpath = ["kernel/src", "tools"]
testpaths = ["kernel/tests", "tools/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
