[project]
name = "torenone"
version = "0.0.0"
description = "TorenOne — AI structural engineer (kernel + service)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Engineering service (Phase 3+) — AI orchestration layer.
service = [
    "openai>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["kernel/src"]

[tool.setuptools.package-data]
torenone_kernel = ["sections/data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["kernel/src", "tools", "service/src"]
testpaths = ["kernel/tests", "tools/tests", "service/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
