[project]
name = "torenone"
version = "0.0.0"
description = "TorenOne — AI structural engineer (kernel + service)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "numpy>=2.4",
    # FEA engine — exact-pinned: identical inputs must give byte-identical results
    # (PRD NFR-3 determinism); a different PyNite build can shift computed forces.
    "PyNiteFEA==3.0.0",
    "matplotlib>=3.10",   # report diagrams (Agg backend)
    "jinja2>=3.1",        # report HTML templating
]

[project.optional-dependencies]
# Engineering service (Phase 3+) — AI orchestration layer + FastAPI app.
service = [
    "openai>=2.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    # [crypto] pulls `cryptography` for ES256/RS256 — Supabase signs user JWTs with
    # asymmetric keys (verified via the project JWKS), not the legacy HS256 secret.
    "pyjwt[crypto]>=2.8",
    # Supabase-backed ReportStore (Task 5.6): Postgres writes + Storage REST upload.
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
]
# PDF rendering — needs system pango/cairo (not installed in CI; PDF tests skip there).
pdf = [
    "weasyprint>=60",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # Pinned for reproducible CI — unpinned ranges silently drifted to ruff 0.15 /
    # mypy 2.x, whose new rules broke the lint/type gate. Bump deliberately.
    "ruff==0.15.16",
    "mypy==2.1.0",
    "httpx>=0.27",   # FastAPI TestClient transport
    "sqlglot>=27,<28",   # parse + contract-test the Supabase SQL migrations (no DB needed)
    "psycopg[binary]>=3.1",   # behavioural RLS isolation test against a real Postgres (DB-gated)
]

[tool.setuptools.packages.find]
where = ["kernel/src"]

[tool.setuptools.package-data]
# Runtime data files that must ship inside the installed wheel (e.g. the Docker image),
# not just be importable from source. Missing the Jinja template here makes /design 502
# in the packaged service (TemplateNotFound) while working fine from a source checkout.
torenone_kernel = ["sections/data/*.json", "report/*.jinja2"]

[tool.pytest.ini_options]
pythonpath = ["kernel/src", "tools", "service/src"]
testpaths = ["kernel/tests", "tools/tests", "service/tests", "supabase/tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# UP042 wants enum.StrEnum (Python 3.11+). The kernel test-suite also runs on 3.9,
# so the `(str, Enum)` pattern is kept intentionally.
ignore = ["UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are designed to be called in argument
# defaults (Depends/Query/etc.) — that is the documented idiom, not a B008 bug.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Security",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
]

[tool.ruff.lint.per-file-ignores]
# These modules must mutate sys.path / probe an optional dependency BEFORE importing
# it, so module-level imports legitimately appear after executable code (E402).
"kernel/src/torenone_kernel/analysis/plane_frame.py" = ["E402"]
"kernel/src/torenone_kernel/analysis/sway_check.py" = ["E402"]
"kernel/tests/test_report.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
